# fishmlserv

./: .README.md.swp  .pyproject.toml.swp  1  Dockerfile  README.md  f.py  fly.toml  pyproject.toml  r.txt
LB/: default.conf
note/: Fish.ipynb  model.pkl  standard score.ipynb
src/fishmlserv/: cli.py  main.py
src/fishmlserv/model/: manager.py  model.pkl
