[project]
name = "fishmlserv"
version = "0.9.0"
description = "Default template for PDM package"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]

[project.scripts]
get-model-path = "fishmlserv.model.manager:get_model_path"
prediction = "fishmlserv.cli:prediction"
